# MsgPkz

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  testSerialClient.ino  testSerialServer.cpp  testTCPClient.cpp  testTCPServer.cpp
include/MsgPkz/: MsgPkzSerialClient.h  MsgPkzSerialServer.h  MsgPkzTCPClient.h  MsgPkzTCPServer.h
include/MsgPkz/messaging/: DataTypes.h  ErrorMessage.h  FrameMessage.h  IMUMessage.h  Message.h  StatusMessage.h
include/MsgPkz/networking/: Serial.h  StreamBase.h  TCPClient.h  TCPServer.h
include/MsgPkz/packetizing/: COBS.h  CRC.h  Packetizer.h  SLIP.h
include/MsgPkz/utils/arx/: LICENSE  XPlattform.h  functional.h  has_libstdcplusplus.h  tuple.h  type_traits.h
include/MsgPkz/utils/memory/: Buffer.h  ByteInStream.h  ByteOutStream.h  ByteStream.h  ByteStreamBase.h
include/MsgPkz/utils/meta/: FunctionTraits.h  FunctorMatching.h
